MariaDB 스타터, JDBC스타터 추가함

--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,10 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	implementation 'org.springframework.boot:spring-boot-starter-web' // web api를 만들기 위해서 필요한거
+	developmentOnly 'org.springframework.boot:spring-boot-devtools' // 개발 툴
+    implementation 'org.mariadb.jdbc:mariadb-java-client' // MariaDB 드라이버
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc' // JDBC 스타터
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
