--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
         run: chmod +x gradlew
 
       - name: Build and Test with Gradle
-        run: ./gradlew build
+        run: ./gradlew clean build
 
       # 6. Docker Hub 로그인
       # (GitHub 레포지토리의 Settings > Secrets에 DOCKER_USERNAME, DOCKER_PASSWORD 등록 필요)
