--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,15 @@ spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+twilio.account-sid=${TWILIO_ACCOUNT_SID}
+twilio.auth-token=${TWILIO_AUTH_TOKEN}
+twilio.phone-number=${TWILIO_PHONE_NUMBER}
+
+spring.ai.openai.api-key=${OPENAI_API_KEY}
+
+# ?? ??
+spring.ai.openai.chat.options.model=gpt-4
+
+# ai ????
+spring.ai.openai.chat.options.temperature=0.7
