통화 할떄 OPEN AI 를 사용해서 답변 하도록 기능 구현함.

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -12,6 +12,7 @@ services:
       - SPRING_DATASOURCE_USERNAME=${SPRING_DB_USER}
       - SPRING_DATASOURCE_PASSWORD=${SPRING_DB_PASS}
       - SPRING_JPA_HIBERNATE_DDL_AUTO=update
+      - SPRING_PROFILES_ACTIVE=prod # 배포용 application-prod.properties 사용
     networks:
       - app-network
 
