--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -16,4 +16,4 @@ spring.ai.openai.chat.options.model=gpt-4
 # ai ????
 spring.ai.openai.chat.options.temperature=0.7
 
-server.base-url=https://dae1da8af7fd.ngrok-free.app
+server.base-url=http://${SERVER_HOST}:${SERVER_PORT}/
