--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,26 @@ jobs:
 
       - name: Build and Test with Gradle
         run: ./gradlew clean build
+        env:
+          # --- Database ---
+          SPRING_DATASOURCE_URL: ${{ secrets.SPRING_DATASOURCE_URL }}
+          SPRING_DATASOURCE_USERNAME: ${{ secrets.SPRING_DATASOURCE_USERNAME }}
+          SPRING_DATASOURCE_PASSWORD: ${{ secrets.SPRING_DATASOURCE_PASSWORD }}
+
+          # --- Twilio ---
+          TWILIO_ACCOUNT_SID: ${{ secrets.TWILIO_ACCOUNT_SID }}
+          TWILIO_AUTH_TOKEN: ${{ secrets.TWILIO_AUTH_TOKEN }}
+          TWILIO_PHONE_NUMBER: ${{ secrets.TWILIO_PHONE_NUMBER }}
+
+          # --- OpenAI ---
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+
+          # --- Server ---
+          # 참고: CI/CD 테스트 환경에서는 굳이 필요 없을 수 있습니다.
+          # 만약 테스트가 이 값을 사용한다면 'localhost'나 '8080' 같은 기본값을
+          # Secrets 대신 직접 넣어줘도 됩니다.
+          SERVER_HOST: ${{ secrets.SERVER_HOST }} # 또는 'localhost'
+          SERVER_PORT: ${{ secrets.SERVER_PORT }} # 또는 '8080'
 
       # 6. Docker Hub 로그인
       # (GitHub 레포지토리의 Settings > Secrets에 DOCKER_USERNAME, DOCKER_PASSWORD 등록 필요)
