--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,6 +4,8 @@ services:
     container_name: my-spring-app
     ports:
       - "8080:8080"
+    env_file:
+      - .env
     depends_on:
       - db
     environment:
