--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -16,4 +16,4 @@ spring.ai.openai.chat.options.model=gpt-4
 # ai ????
 spring.ai.openai.chat.options.temperature=0.7
 
-server.base-url=http://${HOOK_SERVER_HOST}:${HOOK_SERVER_PORT}/
+server.base-url=http://${HOOK_SERVER_HOST}:${HOOK_SERVER_PORT}
