--- a/build.gradle
+++ b/build.gradle
@@ -21,15 +21,26 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web' // web api를 만들기 위해서 필요한거
-	developmentOnly 'org.springframework.boot:spring-boot-devtools' // 개발 툴
-    implementation 'com.twilio.sdk:twilio:10.9.2' // twilio 사용
+// 1. Spring Boot Starters
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // <-- 1. JPA 추가
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-    implementation 'org.mariadb.jdbc:mariadb-java-client'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
+    // 2. Third-party Libraries
+    implementation 'com.twilio.sdk:twilio:10.9.2'
     implementation 'org.springframework.ai:spring-ai-starter-model-openai:1.0.3'
+
+    // 3. Database Driver
+    implementation 'org.mariadb.jdbc:mariadb-java-client'
+
+    // 4. Developer Tools
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    compileOnly 'org.projectlombok:lombok' // <-- 2. Lombok 추가
+    annotationProcessor 'org.projectlombok:lombok' // <-- 3. Lombok 추가
+
+    // 5. Testing
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 idea {
