모델 변경 gpt-4o-mini로 ㅠㅠ

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -11,7 +11,7 @@ twilio.phone-number=${TWILIO_PHONE_NUMBER}
 spring.ai.openai.api-key=${OPENAI_API_KEY}
 
 # ?? ??
-spring.ai.openai.chat.options.model=gpt-4
+spring.ai.openai.chat.options.model=gpt-4o-mini
 
 # ai ????
 spring.ai.openai.chat.options.temperature=0.7
